moved pngs, replaced hard coded css path in return of getCssLinkIfExist at HelperForm

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/old/userStyles/classic.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/old/userStyles/classic.css
@@ -713,7 +713,7 @@ table.tableCalcStat .left {
 
 .jscalendar-DB-title-background-style {
     /*background-color:  #F4BBA5;*/
-    background-image: url('../../../../../css/gradient.php_30px_.png');
+    background-image: url('gradient.php_30px_.png');
 }
 
 span.jscalendar-DB-title-control-normal-style:hover {
