--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/old/userStyles/tabbedPane.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/old/userStyles/tabbedPane.css
@@ -55,7 +55,7 @@ table.subTabbedPane myFaces_panelTabbedPane_emptyHeaderCell {
 td.activeTab {
     width: 150px !important;
     font-size: 100% !important;
-    background-image: url('../../../../../css/gradient.php_30px_.png');
+    background-image: url('gradient.php_30px_.png');
     border-top: 1px solid #F4BBA5 !important;
     border-left: 1px solid #F4BBA5 !important;
     border-bottom: none;
