--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -59,13 +59,9 @@
                         <a href="#"><i class="fa fa-th fa-lg"/></a>
                         <ul>
                             <li><h3>#{msgs.dashboard}<h:outputText rendered="#{LoginForm.maximaleBerechtigung == 1}"> <i>(Admin)</i></h:outputText></h3></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.schritte}" outcome="tasks"><i class="fa fa-bell fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" outcome="processes"><i class="fa fa-hourglass-3 fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.projekte}" outcome="projects"><i class="fa fa-folder-open fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" outcome="ProzessverwaltungAlle?linkId=allProcesses"><i class="fa fa-hourglass-3 fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.schritte}" outcome="AktuelleSchritteAlle"><i class="fa fa-bell fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.batches}" outcome="BatchesAll"><i class="fa fa-files-o fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.prozessvorlagen}" outcome="productionTemplates.jsf?linkId=templates"><i class="fa fa-file-text-o fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.dockets}" outcome="DocketList"><i class="fa fa-list-ol fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.regelsaetze}" outcome="RegelsaetzeAlle"><i class="fa fa-clipboard fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.ldapgruppen}" outcome="LdapGruppenAlle"><i class="fa fa-list-alt fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.bedienungshinweise}" outcome="statischBedienung"><i class="fa fa-commenting fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" outcome="BenutzerAlle"><i class="fa fa-user fa-lg"/></h:link></li>
