--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -21,7 +21,8 @@
                      value="#{ProzessverwaltungForm.lazyDTOModel}"
                      lazy="true"
                      paginator="true"
-                     rows="#{LoginForm.myBenutzer.tableSize}">
+                     rows="#{LoginForm.myBenutzer.tableSize}"
+                     paginatorPosition="bottom">
 
             <p:column headerText="#{msgs.prozessTitel}">
                 <h:outputText value="#{item.title}"/>
