--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/batchList.xhtml
@@ -21,12 +21,12 @@
             <tr>
                 <td>
 
-                    <!-- Ueberschrift -->
+                    <!-- headline -->
                     <h3>
                         <h:outputText id="id4" value="#{msgs.batches}"/>
                     </h3>
 
-                    <!-- globale Warn- und Fehlermeldungen -->
+                    <!-- global warnings and error messages -->
                     <h:messages id="id5" globalOnly="true" errorClass="text_red" infoClass="text_blue"
                                 showDetail="true" showSummary="true" tooltip="true"/>
 
