created ldap group edit page

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
@@ -32,7 +32,7 @@
             <h:outputText value="#{item.gidNumber}"/>
         </p:column>
         <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
-            <h:link outcome="ldapGroupEdit">
+            <h:link outcome="ldapgroupEdit">
                 <f:param name="id" value="#{item.id}" />
                 <i class="fa fa-pencil-square-o fa-lg"/>
             </h:link>
