updated dashboard with new pages

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -62,10 +62,9 @@
                             <li class="nav-pic-text"><h:link value="#{msgs.schritte}" outcome="tasks"><i class="fa fa-bell fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" outcome="processes"><i class="fa fa-hourglass-3 fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.projekte}" outcome="projects"><i class="fa fa-folder-open fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.ldapgruppen}" outcome="LdapGruppenAlle"><i class="fa fa-list-alt fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" outcome="users"><i class="fa fa-user fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.plugins}" outcome="plugins"><i class="fa fa-puzzle-piece fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.bedienungshinweise}" outcome="statischBedienung"><i class="fa fa-commenting fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" outcome="BenutzerAlle"><i class="fa fa-user fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.benutzergruppen}" outcome="BenutzergruppenAlle"><i class="fa fa-users fa-lg"/></h:link></li>
                         </ul>
                     </li>
                     <li>
