--- a/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
@@ -27,6 +27,11 @@
         <h:body styleClass="#{LoginForm.firstVisit ? 'first-visit' : ''}">
             <h:outputStylesheet name="css/kitodo.css"/>
             <h:outputStylesheet name="css/pattern-library.css"/>
+            <h:outputStylesheet name="css/bpmn-js/bpmn-font/css/bpmn.css"/>
+            <h:outputStylesheet name="css/bpmn-js/bpmn-font/css/bpmn-codes.css"/>
+            <h:outputStylesheet name="css/bpmn-js/bpmn-font/css/bpmn-embedded.css"/>
+            <h:outputStylesheet name="css/bpmn-js/diagram-js.css"/>
+            <h:outputStylesheet name="css/bpmn-js/properties-panel.css"/>
             <p:growl id="notifications" widgetVar="notifications" severity="info"/>
             <p:growl id="sticky-notifications" widgetVar="sticky-notifications" sticky="true" severity="info"/>
             <h:panelGroup id="indexErrorPanel" layout="block" rendered="#{empty indexingForm.serverInformation}">
