--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/old/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/old/kitodo.css
@@ -22,7 +22,9 @@
     margin-bottom: 5px;
     margin-right: 12px;
 }
-
+div[id="useform:notifications_container"] {
+    top:0px;
+}
 .filling {
     margin-bottom: 3px;
     width: 100%;
