--- a/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/base.xhtml
@@ -27,7 +27,8 @@
         <h:body>
             <h:outputStylesheet name="css/kitodo.css"/>
             <h:outputStylesheet name="css/pattern-library.css"/>
-            <p:growl id="notifications" widgetVar="notifications" showDetail="true"/>
+            <p:growl id="notifications" widgetVar="notifications" severity="info"/>
+            <p:growl id="sticky-notifications" widgetVar="sticky-notifications" sticky="true" severity="info"/>
             <div class="flex-container">
                 <header class="flex-item" role="banner" id="portal-header">
                     <ui:insert name="header">
