--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -66,6 +66,7 @@
                             <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" outcome="users"><i class="fa fa-user fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.modules}" outcome="newTaskManager"><i class="fa fa-puzzle-piece fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.help}" outcome="help"><i class="fa fa-life-ring fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.indexing}" outcome="indexingPage"><i class="fa fa-database fa-lg"/></h:link></li>
                         </ul>
                     </li>
                     <li>
