--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -746,6 +746,11 @@ footer {
 .ui-chkbox .ui-chkbox-box {
     width: 40px;
     height: 40px;
+    border-radius: 3px;
+}
+
+.ui-chkbox .ui-chkbox-box:hover {
+    background: transparent;
 }
 
 .ui-chkbox .ui-chkbox-box .ui-chkbox-icon {
