--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -34,13 +34,13 @@
                 <ul>
                     <li>
                         <!-- List: my tasks -->
-                        <a href="#"><i class="fa fa-bell-o fa-lg"/><h:panelGroup rendered="#{AktuelleSchritteForm.page.totalResults gt 0}" styleClass="batch-count bc-alert">#{AktuelleSchritteForm.page.totalResults}</h:panelGroup></a>
+                        <a href="#"><i class="fa fa-bell-o fa-lg"/><h:panelGroup rendered="#{AktuelleSchritteForm.lazyDTOModel.rowCount gt 0}" styleClass="batch-count bc-alert">#{AktuelleSchritteForm.page.totalResults}</h:panelGroup></a>
                         <ul>
                             <li><h3>#{msgs.aktuelleSchritte}</h3></li>
                             <ui:repeat value="#{AktuelleSchritteForm.lazyDTOModel.load(0,3, null, null, null)}" var="task">
                                 <li><a href=""><span class="nav-item-col">#{task.title}</span><span class="nav-item-col">#{task.process.title}</span><span class="nav-item-col"><i class="fa fa-check-square-o fa-lg nc-info"/></span></a></li>
                             </ui:repeat>
-                            <li><h:link outcome="AktuelleSchritteAlle" value="#{msgs.allMyTasks} (#{AktuelleSchritteForm.page.totalResults})"/></li>
+                            <li><h:link outcome="tasks" value="#{msgs.allMyTasks} (#{AktuelleSchritteForm.lazyDTOModel.rowCount})"/></li>
                         </ul>
                     </li>
                     <li>
@@ -73,7 +73,6 @@
                         <h:form id="logout-form">
                             <ul id="nav-user">
                                 <li><h3>#{LoginForm.myBenutzer.name} #{LoginForm.myBenutzer.surname}<h:outputText rendered="#{LoginForm.maximaleBerechtigung == 1}"> <i>(Admin)</i></h:outputText></h3></li>
-                                <li><a href="">#{msgs.Language}: #{SpracheForm.locale}</a></li>
                                 <li><h:link value="#{msgs.userData}" outcome="userConfiguration"/></li>
                                 <li><h:link value="#{msgs.passwortAendern}" outcome="changePassword"/></li>
                                 <!-- FIXME: old "Ausloggen" function has been deleted; incorporate new logout method, here! -->
