Drop-Down buttons for creating new elements in both pages : projects.xhtml and processes.xhtml

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -706,6 +706,7 @@ footer {
 }
 
 .ui-commandlink.button-filled-green,
+.button-filled-green > .ui-button,
 .ui-button.button-filled-green {
     background: #00C62F !important;
 }
