Show mets rights owner in project list

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -27,6 +27,10 @@
             <h:outputText value="#{item.title}"/>
         </p:column>
 
+        <p:column headerText="#{msgs.metsRightsOwner}">
+            <h:outputText value="#{item.metsRightsOwner}"/>
+        </p:column>
+
         <p:column headerText="aktiv" styleClass="checkboxColumn">
             <h:outputText>
                 <ui:fragment rendered="#{not item.projectIsArchived}">
