--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -268,6 +268,14 @@ tr.ui-expanded-row-content tr.ui-widget-header,
     background: transparent;
 }
 
+.ui-expanded-row-content table.ui-widget {
+    border-top: 1px solid black;
+}
+
+.ui-expanded-row-content tr {
+    background-color: lightgray !important;
+}
+
 .ui-picklist-caption {
     border-bottom: 1px solid #000 !important;
     color: #000;
