Show associated process templates in expanded project list view

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -63,6 +63,9 @@
 
                 <h:outputText value="#{msgs.dmsExportformat}:"/>
                 <h:outputText value="#{item.fileFormatDmsExport}"/>
+
+                <h:outputText value="#{msgs.prozessvorlagen}:"/>
+                <h:outputText value="#{item.processTitles}"/>
             </p:panelGrid>
         </p:rowExpansion>
 
