--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -44,7 +44,7 @@
                 <h:outputText value="#{item.project.title}"/>
             </p:column>
             <p:column styleClass="actionsColumn" headerText="#{msgs.auswahl}">
-                <h:link outcome="/pages/ProzessverwaltungBearbeiten"
+                <h:link outcome="/pages/processEdit"
                         title="#{msgs.prozessBearbeiten}">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:param name="id" value="#{item.id}" />
