--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
@@ -25,10 +25,10 @@
               dynamic="true">
         <h:form>
             <!-- title -->
-            <p:inputText value="#{property.title}" placeholder="#{msgs.titel}" required="true"/>
+            <p:inputText value="#{ProzessverwaltungForm.property.title}" placeholder="#{msgs.titel}" required="true"/>
 
             <!-- value: text -->
-            <p:inputText value="#{property.value}"/>
+            <p:inputText value="#{ProzessverwaltungForm.property.value}"/>
 
             <p:commandButton action="#{ProzessverwaltungForm.saveCurrentProperty}"
                              update="processEditForm"
