add new login form

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -608,6 +608,16 @@ main i.fa {
     font-size: 20px;
 }
 
+.login-form {
+    margin: auto;
+    display: block;
+    width: 100px;
+}
+
+.login-box {
+    height: 70vh;
+}
+
 /*----------------------------------------------------------------------
 Footer
 ----------------------------------------------------------------------*/
